Add: labels processing
