# app/backend/types/types.go
@@ -10,8 +10,10 @@ type SignInPayload struct {
 }
 
 type SignUpPayload struct {
-	Username string `json:"username" binding:"required"`
-	Email    string `json:"email" binding:"required"`
-	Password string `json:"password" binding:"required"`
-	Gender   string `json:"gender" binding:"required"`
+	Username  string   `json:"username" binding:"required"`
+	Email     string   `json:"email" binding:"required"`
+	Password  string   `json:"password" binding:"required"`
+	Gender    string   `json:"gender" binding:"required"`
+	Label     []string `json:"label"`
+	Biography string   `gorm:"default:''" json:"biography"`
 }
